--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "prod": "next export",
     "test": "jest",
     "test:watch": "jest --watchAll"
   },
